grammar.js
    module: $ => field("entities", optional($._entities)),

    _entities: $ =>
      repeat1(choice($._decl, $.import, seq($.property, ";"), $.statement)),

    // Make this higher precedence than `statement` so we match a top-level decls directly.
    linkage: _ => choice("local", "global", "const", "var"),

    var_decl: $ =>
      seq(
        optional($.visibility),
        $.linkage,
        field("name", $.ident),
        optional(seq(":", field("type_", $.typename))),
        optional($.optional),
        optional(seq("=", field("init", $.expression))),
        optional($.attribute),
        ";",
      ),

    enum_decl: $ =>
      seq(
        optional($.visibility),
        "type",
        field("name", $.ident),
        "=",
        "enum",
        "{",
        optional(seq(commaSep1($.enum_label), optional(","))),
        "}",
        ";",
      ),

    enum_label: $ =>
      seq(
        field("name", $.ident),
        optional(seq("=", choice($.integer, $.char))),
      ),

    visibility: _ => "public",

    statement: $ =>
      prec(
        1,
        choice(
          choice($.block, seq($.expression, ";")),
          $.assert,
          $.delete,
          $.export_,
          $.throw_,
          $.print,
          $.return,
          $.unset,
          seq($.continue, ";"),
          seq($.break, ";"),
          seq($.stop, ";"),
          $.while,
          $.for,
          $.if,
          $.switch,
        ),
      ),

    expression: $ =>
      prec(
        10,
        choice(
          $.self_id,
          $.dd,
          $.ident,
          $.integer,
          $.real,
          $.boolean,
          $.list,
          $.tuple,
          $.map,
          $.string,
          $.bytes,
          $.regexp,
          $.capture_group,
          $.struct_ctr,
          $._address,
          $.network,
          $.port,
          $.char,
          $.bitfield,
          $.assign,
          $.unary_op,
          $.binary_op,
          $.pre,
          $.post,
          $.len,
          choice($.contains, $.contains_not),
          $.cast,
          $.new,
          $.set_add,
          $.list_comp,
          $.function_call,
          $.type_member,
          $.type_member_call,
          $.array_access,
          $.type_member_checked,
          $.type_member_check,
          $.ternary,
          $.error_literal,
          $.condition_check,
          $.null,
          prec(2000, seq("(", $.expression, ")")),
        ),
      ),

    typename: $ =>
      prec(
        4000,
        choice(
          seq(choice($.ident, $.parameterized_type), repeat(choice("&", "[]"))),
          $.bitfield,
        ),
      ),

    ident: $ => seq($.name, optional(seq("::", $.ident))),
    integer: _ => seq(optional("+"), choice(/\d+/, /0x[a-fA-F0-9]+(p\d+)?/)),
    string: _ => /\"(\\.|[^\\"])*\"/,

    _address: $ => choice($.address4, $.address6),
    port: _ => /\d+\/(tcp|udp|icmp)/,

    map: $ =>
      seq(
        "map",
        optional(seq("<", $.typename, ",", $.typename, ">")),
        "(",
        optional(commaSep1(seq($.expression, ":", $.expression))),
        ")",
      ),
