test/corpus/types/map
================================================================================
Ctor
================================================================================

map(1: "b");

--------------------------------------------------------------------------------

(module
  (statement
    (expression
      (map
        (expression
          (integer))
        (expression
          (string))))))

================================================================================
Parameterized
================================================================================

map<uint8, uint8>(1: 1);

--------------------------------------------------------------------------------

(module
  (statement
    (expression
      (map
        (typename
          (ident))
        (typename
          (ident))
        (expression
          (integer))
        (expression
          (integer))))))
