test/corpus/types/port
================================================================================
Port
================================================================================
global p = 8080/tcp;
--------------------------------------------------------------------------------

(module
  (var_decl
    (linkage)
    (ident)
    (expression
      (port))))
